# DATA607S2025

./: .gitignore  README.md  assignment_1.ipynb  assignment_1_solutions.ipynb  assignment_2.ipynb  assignment_2_solutions.ipynb  avocado.ipynb  avocados.csv  in_class_acxtivity.ipynb  lecture01.ipynb  lecture02.ipynb  lecture03.ipynb  lecture04.ipynb  lecture05.ipynb  lecture06.ipynb  lecture07mini.ipynb  lecture09.ipynb  main.py  pyproject.toml
data/: sms_spam.csv
