[project]
name = "data607s2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gurobi-machinelearning>=1.5.5",
    "gurobipy>=12.0.2",
    "gurobipy-pandas>=1.2.2",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sentence-transformers>=5.0.0",
]
[tool.pyright]
exclude = ["**/*ipynb"]

